update NB with examples

--- a/Set-Up-UM-For-MALBEC.ipynb
+++ b/Set-Up-UM-For-MALBEC.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "845838b2-11e4-4e73-b079-a636fbfff5c7",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "16533d05-8dc8-44c7-a931-a6b86ea76ec0",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "b2dd3853-d0a6-455b-8ab1-4c705945ae00",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "500105f5-a2ac-4d2f-be5d-8dcfadddeb6c",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "205e2444-8184-4aaf-bdd6-0bc1809a2dec",
    "metadata": {},
    "outputs": [],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "97c0fc55-3714-46d1-8223-63594e57f997",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "3d70b4e2-4654-4f85-9033-b1a5197c9320",
    "metadata": {},
    "outputs": [],
@@ -126,12 +126,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "92dc90c0-2d22-46f0-955b-be9cb53c7dfe",
    "metadata": {},
    "outputs": [],
    "source": [
     "PSG.save_p_t_profile()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb57c87c-3863-4d11-9fd8-682fc73f7e1c",
+   "metadata": {},
+   "source": [
+    "### 5. Use mule to read in the `.astart` file created by the reconfiguration and modify the profile of water mixing ratio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd1006f9-ea64-4b0b-bb79-905e5b1b7653",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inp_dump = Path(\"$HOME/cylc-run/u-cn666/share/cycle/1/base/umgla.astart\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c5f835a-b8bd-417f-ba61-9dc30b0b3e75",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inp_dump.is_file()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27aa5d78-2182-48cb-8a57-0b6a02c69c13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PSG.replace_profile_in_dump(inp_dump, 10, \"humidity_mixing_ratio\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1c8be63-5952-4f13-b3b0-08fe66014ef9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PSG.replace_profile_in_dump(inp_dump, 391, \"humidity_mixing_ratio\")"
    ]
   }
  ],
